Added the testing for the JACK OS. Also support for deferencing more than just varName's